[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-testtool = "0.10.2"
serde_json = "1.0"
digest = "0.10"
sha2 = "0.10"
rand = "0.8"
blake2 = { version = "0.9", default-features = false }
hex = "*"
ark-std = { version = "0.4.0" }
ark-ff = { version = "0.4.0" }
ark-ec = { version = "0.4.0" }
ark-groth16 = { version = "0.4.0" }
ark-r1cs-std = { version = "0.4.0" }

ark-poly-commit = { version = "0.4.0" }
ark-poly = { version = "0.4.0" }
ark-crypto-primitives = { version = "0.4.0", features = ["crh", "r1cs"] }

ark-bls12-381 = { version = "0.4.0" }

ark-relations = { version = "0.4.0" }
ark-snark = { version = "0.4.0" }
ark-serialize = { version = "0.4.0" }

tracing = { version = "0.1", default-features = false, features = [
    "attributes",
] }
tracing-subscriber = { version = "0.2" }
