[package]
name = "zksudoku-lock"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.15.1"

ark-ff = { version = "0.4.0", default-features = false }
ark-groth16 = { version = "0.4.0", default-features = false }
ark-snark = { version = "0.4.0", default-features = false }
ark-bls12-381 = { version = "0.4.0" }
ark-serialize = { version = "0.4.0", default-features = false }
ark-relations = { version = "0.4.0", default-features = false }